# InventoryCore

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  publish-backend-image.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: customers.py  dashboard.py  inventory.py  orders.py  products.py
backend/app/core/: config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  customer.py  inventory_transaction.py  order.py  product.py
backend/app/schemas/: customer.py  dashboard.py  inventory.py  order.py  product.py
backend/app/services/: inventory_service.py  order_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_customers.py  test_orders.py  test_products.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Modal.tsx  PageHeader.tsx  StateMessage.tsx
frontend/src/pages/: CustomersPage.tsx  DashboardPage.tsx  InventoryPage.tsx  OrdersPage.tsx  ProductsPage.tsx
frontend/src/types/: index.ts
